# aquaui

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
aquaui/: __init__.py  alert.py  choice.py  color_picker.py  dialog.py  notification.py  utils.py
aquaui/notification/: fallback_notification.py  native_notification.py
aquaui/types/: buttons.py  result.py
assets/: Terminal.icns
docs/: 1-dialog.md  2-choice.md  3-notification.md  4-color_picker.md  5-alert.md  README.md  other.md
tests/: test_alert.py  test_aquaui.py  test_buttons.py  test_choice.py  test_color_picker.py  test_dialog.py  test_fallback_notification.py
