[tool.poetry]
name = "aquaui"
version = "0.0.1-0"
description = "Native Mac OS UI elements with python"
authors = ["ninest"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ninest/aquaui/"
documentation = "https://github.com/ninest/aquaui/"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
