[tool.poetry]
name = "aquaui"
version = "0.0.1-1"
description = "Native Mac OS UI elements with python"
authors = ["ninest"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ninest/aquaui/"
documentation = "https://github.com/ninest/aquaui/"

[tool.poetry.dependencies]
python = "^3.7"
pyobjc-core = "^7.0.1"
pyobjc-framework-NotificationCenter = "^7.0.1"
pyobjc-framework-UserNotifications = "^7.0.1"
pyobjc-framework-UserNotificationsUI = "^7.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''